--- a/trunk/MDT_Tools/client/templates/JAVA_messagedictionary.vm
+++ b/trunk/MDT_Tools/client/templates/JAVA_messagedictionary.vm
@@ -2,7 +2,7 @@
 package ats.bbox.common.mo;
 
 
-public class FixMessage {
+public class MessageDictionary {
 
 	public static class FieldsEnum{
 #foreach($field in $fields)
