--- a/trunk/MDT_Tools/client/templates/CSharp_messagedictionary.vm
+++ b/trunk/MDT_Tools/client/templates/CSharp_messagedictionary.vm
@@ -3,7 +3,7 @@ using System;
 using System.Collections.Generic;
 using System.Text;
 
-namespace Ats.Model
+namespace Ats.Model.MO
 {
 
 public class MessageDictionary 
